fix: correct rendering errors when using weasyprint
Switch from flexbox to grid, since weasyprint does not correctly render elements
in flexboxes when text content is too long. This also updates CSS rules to
accommodate restructuring of corresponding HTML.

--- a/template/style.css
+++ b/template/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
 @page {
@@ -9,120 +9,95 @@
 
 @counter-style personal-info-icons {
   system: fixed;
-  symbols: '\F425' '\F4E6' '\F84C';
-  suffix: ' ';
+  symbols: "\F425""\F4E6""\F84C";
+  suffix: " ";
 }
 
 html {
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 12pt;
 }
 
 *,
-*::before,
-*::after {
+*::after,
+*::before {
   box-sizing: inherit;
   margin: 0;
+  print-color-adjust: exact;
+  -webkit-print-color-adjust: exact;
 }
 
-address {
-  font-style: normal;
-}
-
-body {
-  background-color: #f4f7f8;
-  color: #2d3135;
-  margin: 0 auto;
-  padding: 0.5rem;
-  width: 8.5in;
-}
-
-div.card {   
-  flex: auto;
-}
-
-h1 {
-  padding: 1rem;
-  text-transform: uppercase;
-}
-
-h3 {
-  padding-left: 1rem;
-}
-
-img {
-  border: 1px solid #2d3135;
-  height: 2in;
-  margin-right: 0.5rem;
-  object-fit: contain;
-  width: 2in;
-}
-
-section {
-  margin-bottom: 0.5rem;
-}
-
-table {
-  padding: 0 1rem;
-  width: 100%;
-}
-
-th {
-  text-align: start;
-}
-
-address > ul {
-  list-style-type: personal-info-icons;
-  list-style-position: outside;
-  padding-left: 1.5rem;
-}
-
-.label {
-  color: #515253;
-  font-weight: 600;
-}
-
-.section-head {
-  background-color: #2d3135;
-  color: #f4f7f8;
-  font-weight: normal;
-  margin-bottom: 0.5rem;
-  padding: 0.25rem;
+h1,
+h2 {
+  color: #fff;
+  background-color: #000;
+  padding: 0.125rem 0.5rem;
   text-align: center;
 }
 
-::marker {
-  font-family: 'bootstrap-icons';
+h2 {
+  font-weight: 600;
+  margin-bottom: 0.5rem;
 }
 
-#name {
+h3 {
   font-size: 2rem;
-  font-weight: bold;
+}
+
+img {
+  outline: 1px solid;
+  height: 2in;
+  width: 2in;
+}
+
+li {
+  list-style-type: personal-info-icons;
+  list-style-position: outside;
+  font-style: normal;
+  font-weight: 600;
+}
+
+main {
+  display: grid;
+  width: 8.5in;
+  height: 11in;
+  margin: 0 auto;
+  padding: 0.5rem;
+  grid-template-rows: min-content min-content 1fr;
+  grid-gap: 0.5rem;
+}
+
+li span {
+  font-weight: 400;
+}
+
+ul {
+  padding-left: 1.5rem;
+}
+
+.primary {
+  display: grid;
+  grid-template-columns: 2in 1fr;
+  grid-gap: inherit;
+}
+
+.primary > div > *:not(h2) {
+  padding: 0 0.5rem;
+}
+
+.secondary {
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+}
+
+::marker {
+  font-family: "bootstrap-icons";
+  font-weight: 400;
+}
+
+/* Utilities */
+
+.uppercase {
   text-transform: uppercase;
-}
-
-#personal-info {
-  display: flex;
-}
-
-@media print {
-  body {
-    height: 11in;
-  }
-
-  main {
-    height: 61rem;
-  }
-
-  div#secondary  {
-    display: flex;
-    flex-direction: column;
-    height: 48rem;
-  }
-
-  div#secondary > section {
-    flex-shrink: 1;
-    flex-grow: 1;
-  }
 }
